--- a/doc/mgs-2022-slides.ltx
+++ b/doc/mgs-2022-slides.ltx
@@ -451,7 +451,7 @@ Equivalently
 \begin{frame}
   \frametitle{Why do we need loops?}
   \begin{itemize}
-  \item to do something (side effect)
+  \item to do something (no)
   \item to collect something
   \item to detect something
   \end{itemize}
