--- a/doc/mgs-2022-syllabus.ltx
+++ b/doc/mgs-2022-syllabus.ltx
@@ -593,7 +593,7 @@ in Equation~\eqref{eq.slow.exponent}.
   x^n = \begin{cases}
     1 &\,; \text{if $n=0$}\\
     x \times x^{n-1} &\,; \text{if $n > 0$}\\
-    \frac{1}{x^{-n}} &\,; \text{if $n < 0$ and $m\ne 0$}
+    \frac{1}{x^{-n}} &\,; \text{if $n < 0$ and $n\ne 0$}
   \end{cases}
 \end{equation}
 
