--- a/doc/mgs-2022-slides.ltx
+++ b/doc/mgs-2022-slides.ltx
@@ -1218,7 +1218,11 @@ integer addition.   Why?
     \begin{enumerate}
     \item $(S,+)$ is an Abelian group.
     \item $(S,\times)$ is a monoid.
-    \item Distributive: $a,b,c  \in S \implies a\times(b+c)=(a\times b)+(a\times c)$.
+    \item Distributive (right and left): $a,b,c  \in S \implies$
+      \begin{itemize}
+      \item $a\times(b+c)=(a\times b)+(a\times c)$, and
+      \item $(b+c)\times a=(b\times a)+(c\times a)$, and
+      \end{itemize}
     \end{enumerate}
   \end{definition}
 \end{frame}
